--- a/jemdoc.css
+++ b/jemdoc.css
@@ -29,7 +29,7 @@ body {
   padding-right: 50px;
   padding-top: 10px;
   padding-bottom: 30px;
-  max-width: 960px;
+  max-width: 60%;
 }
 
 #layout-menu {
