--- a/red.css
+++ b/red.css
@@ -24,7 +24,7 @@ html {
       background: #f4f4f4;
       border: none;
       border-right: 1px solid #dddddd;
-      border-bottom: none
+      border-bottom: none;
       margin: 0;
       padding-top: 15px;
       padding-left: 8px;
@@ -153,9 +153,9 @@ html {
   
   p {
       margin-top: 0.0em;
-      margin-bottom: 0.8em;
+      margin-bottom: 0.1em;
       padding: 0;
-      line-height: 1.3;
+      line-height: 1.2;
   }
   
   pre {
